<resources>
    <string name="app_name">Economity</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Sign in</string>
    <string name="prompt_password">Password</string>
    <string name="login">Sign in</string>
    <string name="creation1">Voulez-vous créer un nouveau compte ?</string>
    <string name="creation2"><u>Clicker ici</u></string>
    <string name="title_activity_enregistrement">Enregistrement</string>
    <string name="text_enregistrement">Créer un nouveau compte</string>
    <string name="enregistrement1">Vous avez déjà un compte?</string>
    <string name="enregistrement2">SE CONNECTER</string>
    <string name="bt_creation">Créer un compte</string>
    <string name="connect_number">Adresse mail</string>
    <string name="title_activity_app">AppActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="tab_text_1">Portefeuille</string>
    <string name="tab_text_2">Evénements</string>
    <string name="tab_text_3">Objectifs</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_ajouter_transaction">AjouterTransaction</string>
    <string name="title_activity_ajouter_depense">AjouterDepense</string>
    <string name="title_activity_ajouter_recette">AjouterRecette</string>

    <string-array name="objectifPriceCurrency">
        <item>CAD</item>
        <item>USD</item>
        <item>EUR</item>
    </string-array>
    <string name="title_activity_ajouter_evenement">AjouterEvenement</string>
    <string name="title_activity_ajouter_objectifs">AjouterObjectifs</string>
    <string name="devise">Devise</string>
    <string name="nom">Nom</string>
    <string name="budget">Budget</string>
    <string name="date_souhait_e">Date souhaitée</string>
    <string name="choisir_votre_icon">Choisir votre icon</string>
    <string name="ajouter_v_nement">Ajouter événement</string>
    <string name="cliquer_pour_choisir_le_name">Cliquer pour choisir le name</string>
    <string name="note">Note</string>
    <string name="mantant_sauvgard">Mantant sauvgardé</string>
    <string name="mantant_cibl">Mantant ciblé</string>
    <string name="devise_objectif">Devise</string>
    <string name="ajouter_objectif">Ajouter objectif</string>
    <string name="valeur_initiale">Valeur initiale</string>
    <string name="_0_tnd">0 </string>
    <string name="objectif_price_currency">objectif Price Currency</string>
    <string name="ajouter_une_cath_gorie">Ajouter une cathégorie</string>
    <string name="d_p_t">Dépôt</string>
    <string name="salaire">Salaire</string>
    <string name="ajouter_recette">Ajouter recette</string>
    <string name="sant">Santé</string>
    <string name="maison">Maison</string>
    <string name="r_staurants">Réstaurants</string>
    <string name="transports">Transports</string>
    <string name="communication">Communication</string>
    <string name="v_tements">Vêtements</string>
    <string name="autre">Autre</string>
    <string name="ajouter_d_pense">Ajouter dépense</string>
    <string name="add_icon">Ajouter une icon</string>
    <string name="mariage">mariage</string>
    <string name="anniversaire">anniversaire</string>
    <string name="reunion">réunion</string>
    <string name="cancel">Annuler</string>
    <string name="appliquer">Appliquer</string>


</resources>
