<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.evenements.AddEventActivity"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <AutoCompleteTextView
        android:layout_marginTop="10dp"
        android:id="@+id/add_nom_d_evenement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nom"/>

    <AutoCompleteTextView
        android:layout_marginTop="10dp"
        android:id="@+id/add_budget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/budget"
        android:inputType="number"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/dv_evenement"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="8dp">
        </Spinner>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/devise"
            android:textSize="19dp"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">
        <Button
            android:id="@+id/cal"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/callendrier"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="19dp"
                android:id="@+id/calandrier_evenementt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/date_souhait_e"
                />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/noire" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >

        <Button
            android:id="@+id/bt_icon_nationnal"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/autre" />

        <TextView
            android:layout_marginTop="10dp"
            android:textSize="19dp"
            android:id="@+id/tv_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/choisir_votre_icon"
            />

    </LinearLayout>

    <Button
        android:id="@+id/bt_add_evenement_personnel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_creme_button"
        android:text="@string/ajouter_v_nement"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"/>

</LinearLayout>
</ScrollView>


