<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Views.objectifs.AddObjectiveActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">


        <Button
            android:id="@+id/bt_icon_objectifs"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/autre"
            />
        <AutoCompleteTextView
            android:hint="@string/cliquer_pour_choisir_le_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_nom_objectif"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:visibility="gone">

        <AutoCompleteTextView
            android:hint="@string/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_note_objectif"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        >

        <Button
            android:id="@+id/bt_icon_na"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/dollar" />

        <AutoCompleteTextView
            android:layout_marginTop="10dp"
            android:textSize="19dp"
            android:id="@+id/solde_econimise_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/mantant_sauvgard"
            android:inputType="number" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        >

        <Button
            android:id="@+id/bt_ic"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/dollar" />

        <AutoCompleteTextView
            android:layout_marginTop="10dp"
            android:textSize="19dp"
            android:id="@+id/solde_ciblet_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/mantant_cibl"
            android:inputType="number"  />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/dv_objectif"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="8dp">
        </Spinner>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/devise_objectif"
            android:textSize="19dp"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">
        <Button
            android:id="@+id/cal_obj"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/callendrier"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="10dp"
                android:textSize="19dp"
                android:id="@+id/calandrier_objectif"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/date_souhait_e"
                />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/noire" />

        </LinearLayout>
    </LinearLayout>



    <Button
        android:id="@+id/bt_add_objectif_personnel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_creme_button"
        android:text="@string/ajouter_objectif"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"/>


</LinearLayout>

</ScrollView>